--- a/Form_MVC/css/index.css
+++ b/Form_MVC/css/index.css
@@ -4,6 +4,9 @@
 ul li{
 	list-style-type: none;
 }
+a{
+	text-decoration: none;
+}
 .top-bar{
 	display: flex;
 	justify-content: space-around;
@@ -35,5 +38,10 @@ ul li{
 .infor li{
 	margin-right: 5rem;
 	color: lightseagreen;
+}
+
+.infor a{
+    text-decoration: none;
+    color: lightseagreen;
 }
 
